<resources>
    <string name="app_name">Project Havana</string>

    <string name="sign_in_tab">Logowanie</string>
    <string name="sign_up_tab">Rejestracja</string>

    <string name="first_tab">Wydarzenia</string>
    <string name="second_tab">Boiska</string>
    <string name="third_tab">Gracze</string>

    <string name="no_internet">"Brak dostępu do Internetu. Sprawdź połączenie i spróbuj ponownie</string>
    <string name="server_not_response">"Serwer nie odpowiada. Spróbuj ponownie później</string>
    <string name="cannot_take_data">Nie można połączyć z serwerem. \nSprawdź połączenie z Internetem i spróbuj ponownie</string>

    <!--błędy i podpowiedzi logowania-->
    <string name="login_1_login_error">Podany login jest nieprawidłowy</string>
    <string name="login_2_login_blocked">Konto zostało zablokowane</string>
    <string name="login_3_login_nonactive">Konto jest nieaktywne</string>
    <string name="login_4_login_wrong_pass">Podane hasło jest nieprawidłowe</string>

    <string name="loginHint">Login</string>
    <string name="passwordHint">Hasło</string>
    <string name="emailHint">E-mail</string>
    <string name="loginButton">"  Zaloguj  "</string>
    <string name="registrationButton">"  Zarejestruj  "</string>


    <!-- Błędy i podpowiedzi rejestracji -->
    <string name="registration_1_login_empty">Wpisz login</string>
    <string name="registration_2_password_week">Hasło jest za słabe</string>
    <string name="registration_3_email_duplicate">"Podany e-mail już istnieje w systemie</string>
    <string name="registration_4_email_empty">"Podaj adres email</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="api">http://ekipazboiska.pl:50400/</string>
    <string name="title_activity_sign_in">SignIn</string>


    <string name="freeSlotsTitle">"Wolne miejsca: "</string>
    <string name="eventPriceTitle">"Cena: </string>
    <string name="hello_world">Hello world!</string>

    <!-- Szczegóły wydarzenia -->
    <string name="eventShowDetailsTitle">REGUŁY GRY</string>
    <string name="whenTitle">KIEDY?</string>
    <string name="whereTitle">GDZIE?</string>
    <string name="withWhomTitle">Z KIM?</string>
    <string name="priceTitle">ZA ILE?</string>
    <string name="freeSlotsTitleUpperCase">WOLNE MIEJSCA:</string>
    <string name="title_activity_event_show_details">"REGUŁY GRY"</string>

    <!-- Status Twojego zgłoszenia do gry -->
    <string name="joinToGame">Dołącz do gry!</string>
    <string name="waitForAccept">Czekasz na potwierdzenie</string>
    <string name="yourApplicationConfirmed">Grasz!</string>
    <string name="yourApplicationRefused">"Odrzucono Twoje zgłoszenie"</string>

    <!-- Dodawanie wydarzenia -->
    <string name="addEvent">"DODAJ"</string>
    <string name="city">MIASTO</string>
    <string name="field">BOISKO</string>
    <string name="date">DATA</string>
    <string name="hour">GODZINA</string>

    <string name="findEvent">"WYSZUKAJ"</string>


    <!--Informacje o użytkowniku -->
    <string name="userTitle">"UŻYTKOWNIK"</string>
    <string name="userReputation">"REPUTACJA"</string>
    <string name="giveMarkToUser">"OCEŃ UŻYTKOWNIKA"</string>
    <string name="giveMarkToUserButton">"OCEŃ"</string>
    <string name="addComments">"Dodaj komentarz..."</string>
    <string name="addCommentsButton">DODAJ</string>
    <string name="comments">KOMENTARZE</string>
    <string name="toLongCommentError">"Komentarz jest zbyt długi. Max wynosi 1000 znaków"</string>

    <!--Miasta-->
    <string name="citiesTitle">MIASTA</string>
    <string name="addCity">DODAJ</string>
    <string name="findCity">"  WYSZUKAJ  "</string>

    <!--Boiska-->
    <string name="fieldsTitle">BOISKA</string>



</resources>
