<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/transparent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImage"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="visible"/>


    <ProgressBar
        android:id="@+id/startProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/yellow"
        android:layout_below="@+id/logoImage"
        android:visibility="gone"/>



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/logoImage"
        android:id="@+id/editTextRelativeLayout">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signInErrorText"
            android:visibility="visible"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/yellow"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/loginText"
            android:hint="@string/loginHint"
            android:layout_below="@id/signInErrorText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/white"
            android:alpha="0.3"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/emailText"
            android:hint="@string/emailHint"
            android:layout_below="@id/loginText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/white"
            android:alpha="0.3"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/passwordText"
            android:hint="@string/passwordHint"
            android:layout_below="@id/emailText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/white"
            android:alpha="0.3"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:layout_below="@id/passwordText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/registrationButton"
            android:background="@color/yellow"/>

        </RelativeLayout>

</RelativeLayout>