<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logoImage"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:visibility="visible"/>

        <ProgressBar
            android:id="@+id/startProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/yellow"
            android:layout_below="@+id/logoImage"
            android:visibility="visible"/>



        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/logoImage"
            android:id="@+id/editTextRelativeLayout"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signInErrorText"
                android:visibility="visible"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/yellow"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/loginText"
                android:hint="@string/emailHint"
                android:layout_below="@id/signInErrorText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/white"
                android:alpha="0.3"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/passwordText"
                android:hint="@string/passwordHint"
                android:layout_below="@id/loginText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/white"
                android:alpha="0.3"
                android:inputType="textPassword"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordText"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="5dp"
                android:id="@+id/rememberMeLayout">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    style="@style/CustomCheckBox"
                    android:id="@+id/rememberMe"
                    android:checked="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Zapamiętaj mnie"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/rememberMe"
                    android:textColor="@color/white"
                    />

            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:layout_below="@id/rememberMeLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/loginButton"
                android:background="@color/yellow"/>

            </RelativeLayout>



    </RelativeLayout>


</RelativeLayout>